--- a/package.json
+++ b/package.json
@@ -4,13 +4,14 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-     "start": "node ./bin/server",
-     "dev": "nodemon ./bin/server"
+    "start": "node ./bin/server",
+    "dev": "nodemon ./bin/server"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "mongoose": "^8.0.2"
   }
 }
